@@ -62,7 +62,8 @@ def main_build(dir_path, output_dir='.', platform=cc_platform, verbose=True):
     if verbose:
         print('conda packages download: %s' % info['_download_dir'])
 
-    for key in 'license_file', 'welcome_image', 'header_image', 'icon_image':
+    for key in ('license_file', 'welcome_image', 'header_image', 'icon_image',
+                'pre_install', 'post_install'):
         if key in info:
             info[key] = abspath(join(dir_path, info[key]))
 
@@ -70,7 +71,7 @@ def main_build(dir_path, output_dir='.', platform=cc_platform, verbose=True):
         if key not in info:
             continue
         if isinstance(info[key], str):
-            info[key] = list(yield_lines(abspath(join(dir_path, info[key]))))
+            info[key] = list(yield_lines(join(dir_path, info[key])))
 
     for key in 'channels', 'specs', 'exclude', 'packages':
         if key in info:
@@ -79,7 +80,7 @@ def main_build(dir_path, output_dir='.', platform=cc_platform, verbose=True):
 
     fcp.main(info, verbose=verbose)
 
-    info['_outpath'] = abspath(join(output_dir, get_output_filename(info)))
+    info['_outpath'] = join(output_dir, get_output_filename(info))
     create(info)
     print("Succussfully created '%(_outpath)s'." % info)
 
