@@ -25,6 +25,9 @@ packages:
 
 #install_in_dependency_order: True
 
+pre_install: hello.sh
+post_install: goodbye.sh
+
 # The conda default channels which are used when running a conda which
 # was installed be the constructor created (requires conda in the
 # specifications) installer
