@@ -1,0 +1,3 @@
+#!/bin/bash
+
+echo "Goodbye: PREFIX='$PREFIX'"
