@@ -1,3 +1,8 @@
+2016-XX-XX   1.1.0:
+-------------------
+  * add support for pre and post install scripts in Unix
+
+
 2016-03-02   1.0.0:
 -------------------
   * initial release
